--- a/app/views/shared/views/ems_common/angular/_form.html.haml
+++ b/app/views/shared/views/ems_common/angular/_form.html.haml
@@ -127,7 +127,7 @@
         = _("API Version")
       .col-md-8
         = select_tag('api_version',
-                     options_for_select(@openstack_api_versions),
+                     options_for_select(@telefonica_api_versions),
                      "ng-model"                    => "emsCommonModel.api_version",
                      "id"                          => "ems_api_version",
                      "checkchange"                 => "",
@@ -155,7 +155,28 @@
                             "ng-model"                => "emsCommonModel.provider_region",
                             "checkchange"             => ""}
 
+    .form-group{"ng-class" => "{'has-error': angularForm.api_version.$invalid}",
+                "ng-if"    => "emsCommonModel.emstype == 'telefonica'"}
+      %label.col-md-2.control-label{"for" => "ems_region_input"}
+        = _('Region')
+      .col-md-4
+        %input.form-control{"type"                    => "text",
+                            "id"                      => "ems_region_input",
+                            "name"                    => "provider_region",
+                            "ng-model"                => "emsCommonModel.provider_region",
+                            "checkchange"             => ""}
+
     .form-group{"ng-class" => "{'has-error': angularForm.keystone_v3_domain_id.$invalid}", "ng-if" => "emsCommonModel.api_version == 'v3' && (emsCommonModel.emstype == 'openstack' || emsCommonModel.emstype == 'openstack_infra')"}
+      %label.col-md-2.control-label{"for" => "ems_keystone_domain_id"}
+        = _('Keystone V3 Domain ID')
+      .col-md-4
+        %input.form-control{"type"        => "text",
+                            "id"          => "ems_keystone_domain_id",
+                            "name"        => "keystone_v3_domain_id",
+                            "ng-model"    => "emsCommonModel.keystone_v3_domain_id",
+                            "required"    => true,
+                            "checkchange" => ""}
+    .form-group{"ng-class" => "{'has-error': angularForm.keystone_v3_domain_id.$invalid}", "ng-if" => "emsCommonModel.api_version == 'v3' && (emsCommonModel.emstype == 'telefonica')"}
       %label.col-md-2.control-label{"for" => "ems_keystone_domain_id"}
         = _('Keystone V3 Domain ID')
       .col-md-4
