--- a/app/views/shared/views/ems_common/angular/_form.html.haml
+++ b/app/views/shared/views/ems_common/angular/_form.html.haml
@@ -207,6 +207,32 @@
                      "id"                          => "ems_infra_provider_id",
                      "checkchange"                 => "",
                      "selectpicker-for-select-tag" => "")
+    .form-group{"ng-class" => "{'has-error': angularForm.domain_name.$invalid}", "ng-if" => "emsCommonModel.emstype == 'telefonica'"}
+      %label.col-md-2.control-label{"for" => "ems_domain_name"}
+        = _('Domain Name')
+      .col-md-4
+        %input.form-control{"type"        => "text",
+                            "id"          => "ems_domain_name",
+                            "name"        => "domain_name",
+                            "ng-model"    => "emsCommonModel.domain_name",
+                            "required"    => "",
+                            "checkchange" => "",
+                            "auto-focus"  => ""}
+        %span.help-block{"ng-show" => "angularForm.name.$error.required"}
+          = _("Required")
+    .form-group{"ng-class" => "{'has-error': angularForm.project_name.$invalid}", "ng-if" => "emsCommonModel.emstype == 'telefonica'"}
+      %label.col-md-2.control-label{"for" => "ems_project_name"}
+        = _('Project Name')
+      .col-md-4
+        %input.form-control{"type"        => "text",
+                            "id"          => "ems_project_name",
+                            "name"        => "project_name",
+                            "ng-model"    => "emsCommonModel.project_name",
+                            "required"    => "",
+                            "checkchange" => "",
+                            "auto-focus"  => ""}
+        %span.help-block{"ng-show" => "angularForm.name.$error.required"}
+          = _("Required")
 
     .form-group{"ng-class" => "{'has-error': angularForm.zone.$invalid}"}
       %label.col-md-2.control-label{"for" => "ems_zone"}
@@ -231,6 +257,17 @@
                        "required"                    => "",
                        "selectpicker-for-select-tag" => "")
     .form-group{"ng-if" => "emsCommonModel.emstype == 'openstack'"}
+      %label.control-label.col-md-2{"for" => "ems_tenant_mapping_enabled"}
+        = _('Tenant Mapping Enabled')
+      .col-md-8
+        %input{"bs-switch"   => "",
+               :data         => {:on_text => 'Yes', :off_text => 'No', :size => 'mini'},
+               "type"        => "checkbox",
+               "id"          => "ems_tenant_mapping_enabled",
+               "name"        => "tenant_mapping_enabled",
+               "checkchange" => "true",
+               "ng-model"    => "emsCommonModel.tenant_mapping_enabled"}
+    .form-group{"ng-if" => "emsCommonModel.emstype == 'telefonica'"}
       %label.control-label.col-md-2{"for" => "ems_tenant_mapping_enabled"}
         = _('Tenant Mapping Enabled')
       .col-md-8
