--- a/app/views/orchestration_stack/show.html.haml
+++ b/app/views/orchestration_stack/show.html.haml
@@ -5,7 +5,7 @@
   - when "item"
     = render(:partial => "layouts/item")
   - else
-    - if %w(instances security_groups children).include?(@display)
+    - if %w(instances security_groups children custom_button_events).include?(@display)
       = render :partial => "layouts/gtl", :locals => {:action_url => "show/#{@record.id}"}
     - elsif @display == 'stack_orchestration_template'
       = render :partial => "stack_orchestration_template"
