--- a/app/views/persistent_volume/show.html.haml
+++ b/app/views/persistent_volume/show.html.haml
@@ -1,4 +1,4 @@
-- if %w(containers container_groups).include?(@display)
+- if %w(containers container_groups custom_button_events).include?(@display)
   = render :partial => "layouts/gtl", :locals => {:action_url => "show/#{@record.id}"}
 - elsif @showtype == 'main'
   = render :partial => "layouts/textual_groups_generic"
