--- a/app/views/cloud_object_store_container/show.html.haml
+++ b/app/views/cloud_object_store_container/show.html.haml
@@ -1,4 +1,4 @@
-- if @display == 'cloud_object_store_objects'
+- if %w(cloud_object_store_objects custom_button_events).include?(@display)
   = render :partial => "layouts/gtl", :locals => {:action_url => "show/#{@record.id}"}
 - elsif @showtype == 'main'
   = render :partial => "layouts/textual_groups_generic"
