--- a/app/views/cloud_tenant/show.html.haml
+++ b/app/views/cloud_tenant/show.html.haml
@@ -3,7 +3,7 @@
     = render :partial => "layouts/performance_async"
   - else
     - arr = %w(floating_ips network_ports cloud_tenants cloud_networks cloud_subnets network_routers instances images)
-    - arr.concat(%w(security_groups cloud_object_store_containers cloud_volumes cloud_volume_snapshots))
+    - arr.concat(%w(security_groups cloud_object_store_containers cloud_volumes cloud_volume_snapshots custom_button_events))
     - if arr.include?(@display) && @showtype != "compare"
       = render :partial => "layouts/gtl", :locals => {:action_url => "show/#{@record.id}"}
     - elsif @showtype == "compare"
