--- a/app/views/container_group/show.html.haml
+++ b/app/views/container_group/show.html.haml
@@ -1,4 +1,4 @@
-- if %w(containers container_services container_images persistent_volumes).include?(@display)
+- if %w(containers container_services container_images persistent_volumes custom_button_events).include?(@display)
     = render :partial => "layouts/gtl", :locals => {:action_url => "show/#{@record.id}"}
 - else
     - case @showtype
