--- a/app/views/container_image/show.html.haml
+++ b/app/views/container_image/show.html.haml
@@ -1,4 +1,4 @@
-- if %w(container_projects container_groups containers container_nodes).include?(@display)
+- if %w(container_projects container_groups containers container_nodes custom_button_events).include?(@display)
   = render :partial => "layouts/gtl", :locals => {:action_url => "show/#{@record.id}"}
 - else
   - case @showtype
