--- a/app/views/container_node/show.html.haml
+++ b/app/views/container_node/show.html.haml
@@ -1,4 +1,4 @@
-- if %w(container_routes container_services container_replicators container_groups containers container_images).include?(@display) && @showtype != "compare"
+- if %w(container_routes container_services container_replicators container_groups containers container_images custom_button_events).include?(@display) && @showtype != "compare"
   = render :partial => "layouts/gtl", :locals => {:action_url => "show/#{@record.id}"}
 - elsif @showtype == "timeline"
   = render(:partial => "layouts/tl_show_async")
