--- a/app/views/container_template/show.html.haml
+++ b/app/views/container_template/show.html.haml
@@ -1,4 +1,4 @@
-- if @display == 'containers'
+- if %w(containers custom_button_events).include?(@display)
   = render :partial => "layouts/gtl", :locals => {:action_url => "show/#{@record.id}"}
 - elsif @showtype == 'main'
   = render :partial => "layouts/textual_groups_generic"
