--- a/app/views/security_group/show.html.haml
+++ b/app/views/security_group/show.html.haml
@@ -1,5 +1,5 @@
 #main_div
-  - if ["instances", "network_ports"].include?(@display) && @showtype != "compare"
+  - if %w(instances network_ports custom_button_events).include?(@display) && @showtype != "compare"
     = render :partial => "layouts/gtl", :locals => {:action_url => "show/#{@record.id}"}
   - elsif @showtype == 'main'
     = render :partial => "layouts/textual_groups_generic"
