--- a/app/views/shared/views/_prov_dialog.html.haml
+++ b/app/views/shared/views/_prov_dialog.html.haml
@@ -70,7 +70,7 @@
         :prefix                     => "/miq_request/",
         :keys                       => keys})
   - when :volumes
-    - keys = [:name, :size, :delete_on_terminate]
+    - keys = wf.kind_of?(ManageIQ::Providers::Telefonica::CloudManager::ProvisionWorkflow) ? [:name, :size] : [:name, :size, :delete_on_terminate]
     = render(:partial => "/miq_request/prov_dialog_volume_fieldset",
       :locals         => {:workflow => wf,
         :dialog                     => dialog,
